# autocorrstats

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
SpectralCorr/: __init__.py  ar_processes.py  correlations.py  ebisuzaki_significance_testing.py  ebisuzaki_surrogate_generation.py  fft_bootstrap.py  plotting.py  polynomial_coefficients.py  time_series_validation.py
SpectralCorr/tests/: test_ar_processes.py  test_cross_correlation.py  test_ebisuzaki_significance_testing.py  test_notebook_compatibility.py  test_phase_scrambled_corr.py  test_polynomial_coefficients.py
notebook_examples/: AR1_example.ipynb  AR1_lagged_example.ipynb  RAPID_example.ipynb  amoc_rapid_RAPID.csv  correlation_plotting.py  xrft_example.ipynb
