[tool.poetry]
name = "SpectralCorr"
version = "0.1.0"
description = "Phase randomization surrogates for cross-correlation significance testing in time series analysis"
authors = ["Anthony Meza <ameza@mit.edu>"]
maintainers = ["Anthony Meza <ameza@mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anthony-meza/SpectralCorr"
repository = "https://github.com/anthony-meza/SpectralCorr"
keywords = ["time-series", "correlation", "bootstrap", "statistics", "phase-randomization", "surrogates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{include = "SpectralCorr"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24.0,<2.1.0"
scipy = ">=1.13.0"
matplotlib = "^3.6.0"
statsmodels = ">=0.14.2"
pandas = ">=2.0.0,<2.3.0"
xarray = ">=2023.1.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["SpectralCorr/tests"]
addopts = "--cov=SpectralCorr --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.coverage.run]
source = ["SpectralCorr"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
