[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocorrstats"
version = "0.1.0"
description = "Phase randomization surrogates for cross-correlation significance testing in time series analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anthony Meza", email = "ameza@mit.edu"},
]
maintainers = [
    {name = "Anthony Meza", email = "ameza@mit.edu"},
]
requires-python = ">=3.11"
keywords = ["time-series", "correlation", "bootstrap", "statistics", "phase-randomization", "surrogates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0,<2.1.0",
    "scipy>=1.13.0",
    "matplotlib>=3.6.0",
    "pandas>=2.0.0,<2.3.0",
    "xarray>=2023.1.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]

[project.urls]
Homepage = "https://github.com/anthony-meza/autocorrstats"
Repository = "https://github.com/anthony-meza/autocorrstats"

[tool.setuptools.packages.find]
include = ["autocorrstats*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["autocorrstats/tests"]
addopts = "--cov=autocorrstats --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.coverage.run]
source = ["autocorrstats"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
